--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <p>
         este es la primera version, hola Mighty Duckies
     </p>
+
+    <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+    </ul>
 </body>
 </html>
