--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>
         este es la primera version, hola Mighty Duckies
     </p>
+    <p> Este es el párrafo de Super Duckies</p>
 </body>
 </html>
