info desde branch

--- a/index.html
+++ b/index.html
@@ -9,19 +9,10 @@
 <body>
     <p>
         esta es otra version, hola Mighty Duckies
-    </p>
-   
-
-
-
-
-
-
-
-
-
-
-    
+    </p>  
+    <p>
+        informacion desde la rama dev_antonio
+    </p>  
     
     <h3> Hola gentee</h3>
 </body>
