--- a/index.html
+++ b/index.html
@@ -26,8 +26,45 @@
     <h1>Hello world!</h1>>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <div class="patitos">
-        <p>Aqui un pato <img src="https://okdiario.com/img/2022/12/21/datos-curiosos-de-los-patos.jpg"width=40px ></p>
+        <p>Aqui un pato <img src="https://okdiario.com/img/2022/12/21/datos-curiosos-de-los-patos.jpg"width=40px> ></p>
     </div>
+
+
 </body>
 </html>
