--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="hola.js"></script>
     <p>
         esta es otra version, hola Mighty Duckies
     </p>  
